# netizenship

./: LICENSE  README.md  check_version.py  netizenship.py  pyproject.toml  requirements.txt  setup.py  test_.py
snap/: snapcraft.yaml
